Include padding and border in column dimensions
Otherwise the columns will wrap unexpected when they use paddings.

--- a/lump-grid.css
+++ b/lump-grid.css
@@ -6,6 +6,9 @@
   align-items: stretch;
   width: 100%; }
 
+.row > * {
+  box-sizing: border-box; }
+
 [class*="col"] {
   position: relative;
   width: 100%;
